--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<div class="col-md-12">
 			<ul class="nav">
 				<li class="nav-item">
-					<a class="nav-link active" href="index.html">Remedios Caseros</a>
+					<a class="nav-link active" href="index.html">UNDERTONES</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="story.html">Historia</a>
