--- a/index.html
+++ b/index.html
@@ -26,33 +26,18 @@
  <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
-			<ul class="nav">
-				<li class="nav-item">
-					<a class="nav-link active" href="index.html">UNDERTONES</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="story.html">Historia</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="remedies.html">Remedios</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="upload.html">Subir Remedios</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="contact.html">Contacto</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="download.html">Descargar App</a>
-				</li>
-			</ul>
-			<div class="carousel slide" id="carousel-861355">
+			<div class="page-header">
+				<h1>
+					UNDERTONE JACKETS
+				</h1>
+			</div>
+			<div class="carousel slide" id="carousel-502313">
 				<ol class="carousel-indicators">
-					<li data-slide-to="0" data-target="#carousel-861355" class="active">
+					<li data-slide-to="0" data-target="#carousel-502313" class="active">
 					</li>
-					<li data-slide-to="1" data-target="#carousel-861355">
+					<li data-slide-to="1" data-target="#carousel-502313">
 					</li>
-					<li data-slide-to="2" data-target="#carousel-861355">
+					<li data-slide-to="2" data-target="#carousel-502313">
 					</li>
 				</ol>
 				<div class="carousel-inner">
@@ -89,18 +74,27 @@
 							</p>
 						</div>
 					</div>
-				</div> <a class="carousel-control-prev" href="#carousel-861355" data-slide="prev"><span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span></a> <a class="carousel-control-next" href="#carousel-861355" data-slide="next"><span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span></a>
+				</div> <a class="carousel-control-prev" href="#carousel-502313" data-slide="prev"><span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span></a> <a class="carousel-control-next" href="#carousel-502313" data-slide="next"><span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span></a>
 			</div>
-			<div class="jumbotron">
-				<h2>
-					Remedios Caseros
-				</h2>
-				<p>
-					This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.
-				</p>
-				<p>
-					<a class="btn btn-primary btn-large" href="#">Learn more</a>
-				</p>
+			<h2>
+				Heading
+			</h2>
+			<p>
+				Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+			</p>
+			<p>
+				<a class="btn" href="#">View details »</a>
+			</p>
+			<div class="row">
+				<div class="col-md-4">
+					<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
+				</div>
+				<div class="col-md-4">
+					<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
+				</div>
+				<div class="col-md-4">
+					<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
+				</div>
 			</div>
 		</div>
 	</div>
