Adding first slide

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				</ol>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img class="d-block w-100" alt="Carousel Bootstrap First" src="https://www.layoutit.com/img/sports-q-c-1600-500-1.jpg" />
+						<img class="d-block w-100" alt="Carousel Bootstrap First" src="img/slide1.jpg" />
 						<div class="carousel-caption">
 							<h4>
 								First Thumbnail label
